# smithproxy

./: .git_pre-commit  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  FindLibCli.cmake  FindLibConfig.cmake  FindLibMicroHttpd.cmake  Findhiredis.cmake  QuickHowto-Webhook.md  QuickInstall-Mitm.md  README.md  Release_Notes.md  TODO-dev.md  addrobj.cpp  addrobj.hpp  asyncdns.hpp  asyncsocket.hpp  authfactory.hpp  authfactory4.cpp  authfactory6.cpp  bitbucket-pipelines.yml  cfgapi.cpp  cfgapi.hpp  cfgapi_auth.cpp  cfgapi_auth.hpp  cfgapi_auth6.cpp  cidr.cpp  cidr.hpp  cmdserver.cpp  cmdserver.hpp  coverity.cmake  daemon.cpp  daemon.hpp  dns.cpp  dns.hpp  filterproxy.cpp  filterproxy.hpp  (+42 more)
.github/: FUNDING.yml
.github/workflows/: build-ubuntu-22.04.yml  ccpp.yml  codeql-analysis.yml  flawfinder-analysis.yml
async/: asyncocsp.hpp  asyncsocket.hpp
certs/: ca-cert.pem  ca-key.pem  cl-cert.pem  cl-key.pem  srv-cert.pem  srv-key.pem
docs/: README.md  docker-run-script.md  quick-install-howto-0.8.md  smithproxy.1  sxhost-locally-originated-traffic.md  tproxy.txt
etc/: smithd.cfg  smithproxy.cfg  smithproxy.init  smithproxy.startup.cfg  smithproxy.startup.sh  smithproxy_cli  users.cfg  users.key
etc/apparmor/: usr.bin.smithproxy
etc/certs/default/: ca-cert.pem  ca-key.pem  cl-cert.pem  cl-key.pem  portal-cert.pem  portal-gen.info  portal-key.pem  srv-cert.pem  srv-key.pem  sslca.json
etc/logrotate.d/: smithproxy
etc/msg/en/: html_img_warning.txt  html_page.txt  test.txt
etc/service/initd/: smithproxy.init
etc/service/systemd/: sx-core@.service  sx-network@.service
ext/: cidr.cpp
infra/: daemon.py  smithdog.py  uxserv.py
infra/authtools/: sx_passwd.py
infra/bend/: bend.py  bendbrod.py  bendutil.py  logontable.py  shmbuffer.py  shmtable.py  tokentable.py
infra/bend/auth/: crypto.py  ldapaaa.py  ldapcon.py
infra/bend/clients/: smithporter.py
infra/bend/wot/: wotcon.py  wotresponder.py
infra/portal/: authenticated.html  webfr.py
infra/portal/cgi-bin/: auth.py  auth2.py  util.py
infra/sslca/: genca.py  makecerts.py  sxyca.py
man/: NOTES.txt  README.txt  TESTING_README.txt  ipt_chain_setup.sh  smithproxy.1  smithproxy_net_setup.sh  tproxy.txt
smithbackd/: smithd.cpp  smithdc.cpp  smithdcx.cpp  smithdcx.hpp
snap/hooks/: install  post-refresh
src/: addrobj.hpp  authfactory.hpp  authfactory4.cpp  authfactory6.cpp  cfgapi.cpp  cfgapi.hpp  cmdserver.cpp  cmdserver.hpp  daemon.cpp  dns.cpp  dns.hpp  inspectors.cpp  main.cpp  main.hpp  mitmhost.hpp  mitmproxy.cpp  mitmproxy.hpp  policy.cpp  policy.hpp  pyinspector.hpp  smithlog.cpp  smithlog.hpp  smithproxy.cpp  smithproxy.hpp  socksproxy.cpp  staticcontent.cpp  staticcontent.hpp
src/async/: asyncdns.hpp  asyncocsp.hpp  asyncsocket.hpp
src/cli/: cligen.cpp  cligen.hpp  clihelp.cpp  clihelp.hpp  clistate.cpp  clistate.hpp  cmdserver.cpp  cmdserver.hpp
src/cli/diag/: diag_cmds.cpp  diag_cmds.hpp
src/cmd/: cligen.cpp  cligen.hpp  clihelp.cpp  clihelp.hpp  clistate.cpp  clistate.hpp  cmdserver.cpp  cmdserver.hpp
src/cmd/diag/: diag_cmds.cpp  diag_cmds.hpp
src/ext/cxxopts/: cxxopts.hpp
src/ext/hpack/: hpack.hpp  hpack_tests.cpp
src/ext/libcidr/: cidr.cpp  cidr.hpp
src/ext/nltemplate/: nltemplate.cpp  nltemplate.hpp
src/infra/: daemon.py  smithdog.py  uxserv.py
src/infra/authtools/: sx_passwd.py
src/infra/bend/: bendbrod.py  bendutil.py  logontable.py  shmtable.py
src/infra/portal/: authenticated.html  index.html  webfr.py
src/infra/sslca/: askbot.py  makecerts.py  makeportalcert.py  sxyca.py
src/inspect/: dns.cpp  dns.hpp  dnsengine.hpp  dnsinspector.cpp  dnsinspector.hpp  dohinspector.hpp  engine.hpp  http1engine.cpp  http1engine.hpp  pyinspector.hpp  sigfactory.hpp  sxsignature.hpp
src/inspect/engine/: http.cpp  http.hpp
src/inspect/fp/: ja4.cpp  ja4.hpp
src/inspect/kb/: kb.hpp  node.hpp
src/inspect/tests/: dns_tests.cpp  http1_tests.cpp  ja4_tests.cpp  kb_tests.cpp  node_tests.cpp
src/policy/: addrobj.cpp  addrobj.hpp  authfactory.hpp  authfactory4.cpp  authfactory6.cpp  cfgelement.hpp  inspectors.cpp  inspectors.hpp  loadb.cpp  policy.cpp  policy.hpp  profiles.cpp  profiles.hpp
src/policy/tests/: addrobj_test.cpp  policy_test.cpp
src/proxy/: fdq.cpp  fdq.hpp  filterproxy.cpp  filterproxy.hpp  mitmcom.cpp  mitmcom.hpp  mitmhost.cpp  mitmhost.hpp  mitmproxy.cpp  mitmproxy.hpp  nbrhood.hpp  ocspinvoker.cpp  ocspinvoker.hpp  proxymaker.cpp  proxymaker.hpp  redison.hpp
src/proxy/filters/: access_filter.cpp  access_filter.hpp  filterproxy.cpp  filterproxy.hpp  sinkhole.cpp  sinkhole.hpp  statsfilter.cpp  statsfilter.hpp  tesfilter.hpp  testfilter.cpp
src/proxy/socks5/: sockshostcx.cpp  sockshostcx.hpp  socksproxy.cpp  socksproxy.hpp
src/service/: daemon.cpp  daemon.hpp  netservice.cpp  netservice.hpp  smithd.cpp  smithdc.cpp  smithdcx.cpp  smithproxy.cpp  smithproxy.hpp  srvutils.cpp  srvutils.hpp  tpool.hpp
src/service/cfgapi/: cfgapi.cpp  cfgapi.hpp  cfgvalue.cpp  cfgvalue.hpp
src/service/cmd/: cligen.cpp  cligen.hpp  clihelp.cpp  clihelp.hpp  clistate.cpp  clistate.hpp  cmdserver.cpp  cmdserver.hpp
src/shm/: shmauth.cpp  shmauth.hpp  shmbuffer.hpp  shmtable.hpp  shmtest.cpp
src/smithbackd/: smithdcx.cpp
src/tests/: test_misc.cpp
src/utils/: checkpoints.hpp  fs.cpp  fs.hpp  lazy_ptr.hpp  lru.hpp  mem.cpp  mem.hpp  singleton.hpp  str.cpp  str.hpp  tenants.cpp  tenants.hpp
tools/: BUILD.md  NOTES.md  Ubuntu-20.04-0.9-deps.sh  gen_changelog.py  linux-build.sh  linux-deps.sh  sx-builder.py  sx_certinfo_ca  sx_certinfo_portal  sx_download_ca_bundle  sx_download_ctlog  ubuntu20.04-deps.sh
tools/build-scripts/: README.txt
tools/docker/: Dockerfile-debian9-build  Dockerfile-ubuntu16.04-build  Dockerfile-ubuntu18.04-build  Dockerfile-ubuntu18.04-deb  Dockerfile-ubuntu18.04-run  Dockerfile-ubuntu18.04-testing  Dockerfile-ubuntu18.04-testing-cpp17  Dockerfile-ubuntu18.04-testing-cpp17_base  Dockerfile-ubuntu18.10-build
tools/python-libsmcap/: smcap.py  smcap_http.py
tools/wportals/: readme.txt
(+153 files in other folders)
